# Academic

./: CMakeLists.txt  CMakeLists.txt.user.3.3-pre1  main.cpp  readme.md
Advanced/labs_0x00/: labs_0x00.c
Advanced/labs_0x01/: chapter_03.h  chapter_06.h  chapter_10.h
Advanced/labs_0x02/: chapter_03.cpp  chapter_05.cpp  chapter_09.cpp  chapter_09.h
Advanced/labs_0x03/: chapter_01.hpp
Algorithms/: CMakeLists.txt  chapter_01.cpp  labs_0x03.hpp  main.c  readme.md
Basic/: README.md
Basic/C-Primer-Plus/: 03_Data_and_C.c
Basic/Extra/: queue.c  readme.md
Basic/Labs-C/: 01_Basic_data_assignment_and_console.c  02_Integer_arithmetic.c  05_Loops_with_parameters.c  CMakeLists.txt  labs_0x07.c  labs_0x07.h  library.h  main.c
C-Primer-Plus/: 01_Getting_Ready.c  02_Introducing_C.c  03_Data_and_C.c  04_Character_Settings_and_Formatted_IO.c  05_Operators_Expressions_and_Statements.c  06_C_Control_Statements_Looping.c  07_C_Control_Statements_Branching_and_Jumps.c  08_Character_IO_and_Input_Validation.c  09_Functions.c  10_Array_and_Pointers.c  11_Character_Strings_and_String_Functions.c  12_Storage_Classes_Linkage_and_Memory_Managment.c  13_File_Input_Output.c  14_Structures_and_Data_Forms.c  15_Bit_Fiddling.c  CMakeLists.txt  main.c
C-Primer-Plus/console/: 04_Character_Settings_and_Formatted_IO.txt  05_Operators_Expressions_and_Statements.txt  06_C_Control_Statements_Looping.txt  07_C_Control_Statements_Branching_and_Jumps.txt
CPP-Programming-Language/: 01_Object_Oriented_Intro.cpp  01_Object_Oriented_Intro.hpp  02_Create_Objects.cpp  02_Create_Objects.hpp  03_C_language_in_CPP.cpp  03_C_language_in_CPP.hpp  04_Data_Abstraction.cpp  04_Data_Abstraction.hpp  05_1_Hiding_the_Implementation.cpp  05_1_Hiding_the_Implementation.hpp  05_Hiding_the_Implementation.cpp  05_Hiding_the_Implementation.hpp  06_Initialization_and_Cleanup.cpp  06_Initialization_and_Cleanup.hpp  07_Function_Overloading_and_Default_Arguments.cpp  07_Function_Overloading_and_Default_Arguments.hpp  08_Constants.cpp  08_Constants.hpp  09_Inline_Functions.cpp  09_Inline_Functions.hpp  10_1_Name_Control.cpp  10_1_Name_Control.hpp  10_Name_Control.cpp  10_Name_Control.hpp  11_References_and_Copy_Constructor.cpp  11_References_and_Copy_Constructor.hpp  12_Operator_Overloading.cpp  12_Operator_Overloading.hpp  13_Dynamic_Object_Creation.cpp  13_Dynamic_Object_Creation.hpp  14_Inheritance_and_Composition.cpp  14_Inheritance_and_Composition.hpp  15_Polymorphism_and_Virtual_Functions.cpp  15_Polymorphism_and_Virtual_Functions.hpp  16_Introduction_to_Templates.cpp  16_Introduction_to_Templates.hpp  17_Exceptions.cpp  17_Exceptions.hpp  18_Standard_Library.cpp  18_Standard_Library.hpp  (+24 more)
CPP-Programming-Language/files/: chapter-07.txt  chapter-6-5.txt
CPP-Programming-Language/labs_0x01/: chapter_03.cpp  chapter_10_1.h  chapter_12.h  chapter_13.h  chapter_15.h  chapter_16.h
CPP-Programming-Language/labs_0x02/: chapter_05.h  chapter_10.h  labs_0x02.h
CPP-Programming-Language/labs_0x02/files/: chapter-3.txt  chapter-6-1.txt  chapter-6-6.txt
Exams-Python/: 02_Logical_Statements.py  02_Logical_Statements.txt  04_Code_and_Decode.py  04_Code_and_Decode.txt  05_Binary_Algorithm.py  05_Binary_Algorithm.txt  11_Passwords_and_Data.py  11_Passwords_and_Data.txt  readme.md
Extra-labs/: 01_abstract_dictionary_using_dynamic_memory.c  01c_tests_and_console_results.txt  readme.md
KR/: draft_more_extra.c
Labs-C/: 01_Basic_data_assignment_and_console.c  02_Integer_arithmetic.c  03_Logical_types_and_statements.c  04_Branching_and_jumps.c  05_Loops_with_parameters.c  06_Loops_with_conditions.c  07_Combinataion_loops_and_conditions.c  08_Nested_Loops.c  09_Strings_and_Chars.c  10_Functions_and_Procedures.c  11_Simple_Arrays.c  12_2D_Arrays.c  13_Arrays_and_Structures.c  14_Files_and_Types.c  15_Extra.c  CMakeLists.txt  library.c  library.h  main.c
Labs-Python/: readme.md
Pascal/: main.pas  readme.md
Questions/: 018_Structures_and_simple_sorts.c  019_Hash_function_and_collisions.c  019c_console_result_of_hash_table.txt  readme.md
Research/: readme.md
Theory-C/: readme.md
University/: readme.md
University/05_Weather_Sensors_and_Charts/: CMakeLists.txt  debug_a.txt  debug_b.txt  debug_c.txt  debug_d.txt  debug_e.txt  debug_f.txt  debug_info.txt  main.c  readme.md
University/08_CPP_Binary_Search_Tree/: BinaryTree.hpp  CMakeLists.txt  DebugTreeObject.hpp  main.cpp  readme.md
University/08_C_Binary_Search_Tree/: CMakeLists.txt  console.txt  main.c  readme.md
University/09_C_Gradient_Descent/: CMakeLists.txt  main.c  readme.md
labs_0x00/: labs_0x00.c  labs_0x00.cpp  labs_0x00.h
labs_0x01/: chapter02.cpp  chapter02.h  chapter_03.cpp  chapter_03.h  chapter_04.cpp  chapter_04.h  chapter_05.cpp  chapter_05.h  chapter_05_1.cpp  chapter_05_1.h  chapter_06.cpp  chapter_06.h  chapter_07.cpp  chapter_07.h  chapter_08.cpp  chapter_08.h  chapter_09.h  chapter_10.cpp  chapter_10.h  chapter_10_1.cpp  chapter_10_1.h  chapter_11.cpp  chapter_11.h  chapter_12.cpp  chapter_12.h  chapter_13.cpp  chapter_13.h  chapter_14.cpp  chapter_14.h  chapter_15.cpp  chapter_15.h  chapter_16.cpp  chapter_16.h  labs_0x01.cpp  labs_0x01.h
labs_0x02/: chapter_01.cpp  chapter_01.h  chapter_02.cpp  chapter_02.h  chapter_03.cpp  chapter_03.h  chapter_04.cpp  chapter_04.h  chapter_05.cpp  chapter_05.h  chapter_06.cpp  chapter_06.h  chapter_07.cpp  chapter_07.h  chapter_08.cpp  chapter_08.h  chapter_09.cpp  chapter_09.h  chapter_10.cpp  chapter_10.h  labs_0x02.cpp  labs_0x02.h
labs_0x03/: labs_0x03.cpp  labs_0x03.hpp
labs_0x04/: labs_0x04.cpp  labs_0x04.hpp
labs_0x05/: chapter_01.cpp  chapter_01.hpp  chapter_02.cpp  chapter_02.hpp  chapter_03.cpp  chapter_03.hpp  chapter_04.cpp  chapter_05.cpp  chapter_06.cpp  chapter_06.hpp  chapter_07.cpp  chapter_08.cpp  chapter_08.hpp  chapter_09.hpp  chapter_10.hpp  labs_0x05.cpp  labs_0x05.hpp
labs_0x06/: labs_0x06.cpp  labs_0x06.hpp
labs_0x07/: chapter_01.c  chapter_04.c  chapter_05.c  labs_0x07.c  labs_0x07.h  theory.c
(+58 files in other folders)
